Fixing problems with screen responsiveness
When using other screen sizes, we had problems with scrolling through the page, text was hidden by the footer/navigator and the map page was function in a weird way.

This commit changes that behaviour, as well as other changes that need to be done, such as:
- deleting useless classes/identifiers
- adopting more the use of bootstrap to our advantage
- passing style from .html file to .css file (still in progress, more commits to come)

Many thanks to @anagracio for the changeView code and with some other help with the styling/bootstrap

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -16,100 +16,34 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-/* * { */
-    /* -webkit-tap-highlight-color: rgba(0,0,0,0); make transparent link selection, adjust last value opacity 0 to 1.0 */
-/* } */
+
 @font-face {
     font-family: "RaulLinoFonte";
-    src: url("/www/RaulLinoFonte.ttf");
-}
-
-.class-font {
-    font-family: 'RaulLinoFonte';
+    src: url("../RaulLinoFonte.ttf");
 }
 
 body {
-    /* -webkit-touch-callout: none;                prevent callout to copy image, etc when tap to hold */
-    /* -webkit-text-size-adjust: none;             prevent webkit from resizing text to fit */
-    /* -webkit-user-select: none;                  prevent copy paste, to allow, change 'none' to 'text' */
+    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+    user-select: none;                          /* required to use webkit-user-select */
+    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     background-color:#FFFFFF;
-    font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
-    /* font-size:12px; */
-    /* height:100vh; */
-    /* margin:0px; */
-    /* padding:0px; */
-    /* Padding to avoid the "unsafe" areas behind notches in the screen */
-    /* padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px); */
-    text-transform:uppercase;
-    /* width:100%; */
-    padding-bottom: 76px;
+    font-family: 'RaulLinoFonte', system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
+    text-transform: uppercase;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
-/* Portrait layout (default) */
-/* .app { */
-    /* background:url(../img/logo.png) no-repeat center top; 170px x 200px */
-    /* position:absolute;             position in the center of the screen */
-    /* left:50%; */
-    /* top:50%; */
-    /* height:50px;                   text area height */
-    /* width:225px;                   text area width */
-    /* text-align:center; */
-    /* padding:180px 0px 0px 0px;     image height is 200px (bottom 20px are overlapped with text) */
-    /* margin:-115px 0px 0px -112px;  offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
-/* } */
+.yellow-divisor {
+    background-color: #e2d301;
+    height: 2px;
+    width: 100%;
+}
 
-/* Landscape layout (with min-width) */
-/* @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) { */
-    /* .app { */
-        /* background-position:left center; */
-        /* padding:75px 0px 75px 170px;  padding-top + padding-bottom + text area = image height */
-        /* margin:-90px 0px 0px -198px;  offset vertical: half of image height */
-                                      /* offset horizontal: half of image width and text area width */
-    /* } */
-/* } */
-
-/* .event {
-    border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
-} */
-
-/* .event.listening {
-    background-color:#333333;
-    display:block;
-} */
-
-/* .event.received {
-    background-color:#4B946A;
-    display:none;
-} */
-
-/* #deviceready.ready .event.listening { display: none; } */
-/* #deviceready.ready .event.received { display: block; } */
-
-/* @keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-} */
-
-/* .blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
-} */
-
-
-/* @media screen and (prefers-color-scheme: dark) {
-} */
-
-#mapContainer {
-    position : center; 
-    border: 1px solid #000;
-    margin: 10px 10px 100px 10px;
-    height: fit-content;
+.transparent-divisor {
+    background-color: transparent;
+    height: 2px;
+    width: 100%;
 }
 
 #map {
@@ -147,4 +81,8 @@ h3 {
     font-size: 18px;
     margin-left: auto;
     color: #04c263;
+}
+
+p {
+    text-align: justify;
 }
